                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-12-30
 * UriPart role should also have had skip_duplicate turned on by default.

2016-12-28
 * UriPartOnInit role should have had skip_duplicate turned on by default.
 * Show job id in Wingman error message when not found.

2016-11-04
 * _order_by can now be an array.

2016-10-18
 * Backed out change added on 2016-10-14, because the user decided not to use it, and it was causing other problems elsewhere in existing apps.

2016-10-14
 * lib/DB/Result.pm now has verify_creation_params setting the values of required params so that they can be used in a can_edit() check when creating an object.

2016-10-13
 * S3Image now includes the object id in the local cache path.

2016-10-07
 * Add option to skip Wing's field uniqueness check, if the field value is null.

2016-10-04
 * Allow joined queries on Rest generate_relationship().

2016-08-29
 * Switched to our own markdown parser for better security, speed, and formatting.

2016-08-25
 * Added better precheck for unique fields to check for unique indexes as well as unique qualifiers. 
 * Added in page targets to Web Filtered Fields.

2016-08-22
 * Requires Text::MultiMarkdown and URI::Find::Delimited.
 * Allow for Markdown in Web Filtered Fields.
 * ContentFilter now uses ## instead of == for headings. Use something like this to upgrade your database: 

    update groups set description=replace(description, '==','##');


2016-08-18
 * Add a login link to 401 ajax error messages.

2016-08-08
 * Export "can_view" property via describe() method in Result.pm

2016-08-02
 * Fixed a bug in Wing::ContentFilter where it couldn't get SSL sites.

2016-07-18
 * Added filter to Wing::Role::Result::Field.

2016-07-11
 * Disambiguate a Rest _order_by clause.